PSS3: multi-packet case

--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2023/10/30"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2023/11/5"
    ]
   },
   {
@@ -99,11 +99,13 @@
     "data_dir = '/Users/user/0-python/JUICE_data/'        # CDF data folder\n",
     "\n",
     "# *** Ver.2 ***\n",
-    "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID23_20231024-0011.cdf'\n",
+    "# data_name = 'test-CCSDS/sample/cdf/SID23_20231024-0011.cdf'\n",
     "# data_name = 'test-CCSDS/sample/cdf/SID23_20231024-0024.cdf'\n",
-    "# data_name = 'test-CCSDS/sample/cdf/SID23_20231024-0034.cdf'\n"
+    "# data_name = 'test-CCSDS/sample/cdf/SID23_20231024-0034.cdf'\n",
+    "\n",
+    "# 202311 -- FS\n",
+    "data_name = 'test-TMIDX/202310_FS/cdf/SID23_Seq07.cdf'\n"
    ]
   },
   {
@@ -159,9 +161,12 @@
    "outputs": [],
    "source": [
     "# Mode \n",
+    "print(data.time.shape)\n",
+    "\n",
     "N_ch = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
-    "print(\"==> Num-samples:\", n_time, \"   Num-Block:\", n_block, \"   Length:\", n_length, \"  frequency_center:\", freq_center, \"[kHz]\")"
+    "print(\"==> Num-samples:\", n_time, \"   Num-Block:\", n_block, \"   Length:\", n_length, \"  time_length:\", data.time[0][n_length-1], data.time[1][0], \"sec in 1-block\", data.time[n_block-1][n_length-1], \"sec in total\")\n",
+    "# print(\"==> Num-samples:\", n_time, \"   Num-Block:\", n_block, \"   Length:\", n_length, \"  time_length:\", data.time[0][0][n_length-1], data.time[0][1][0], \"sec in 1-block\", data.time[n_time-1][n_block-1][n_length-1], \"sec in total\")\n"
    ]
   },
   {
@@ -180,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 16))\n",
+    "fig = plt.figure(figsize=(12, 18))\n",
     "ax1 = fig.add_subplot(8, 1, 1)\n",
     "ax3 = fig.add_subplot(8, 1, 2)\n",
     "ax5 = fig.add_subplot(8, 1, 3)\n",
@@ -217,21 +222,26 @@
     "\n",
     "# range: X-axis\n",
     "xlim=[0, len(np.ravel(data.Eu_i[:][:]))]\n",
+    "print(xlim)\n",
     "ax1.set_xlim(xlim)\n",
     "ax3.set_xlim(xlim)\n",
     "ax5.set_xlim(xlim)\n",
     "ax7.set_xlim(xlim)\n",
-    "xlim=[128 * data.N_feed[0] * 0, 128 * data.N_feed[0] * .1]\n",
+    "xlim=[0, 10000]\n",
+    "# xlim=[128 * data.N_feed[0] * 45 * 24, 128 * data.N_feed[0] * 45 * 24 + 10000]\n",
+    "print(xlim)\n",
     "ax2.set_xlim(xlim)\n",
     "ax4.set_xlim(xlim)\n",
     "ax6.set_xlim(xlim)\n",
-    "\"\"\"\n",
+    "\n",
     "# range: Y-axis\n",
-    "ylim=[-10**(p_raw_max/.2), 10**(p_raw_max/.2)]\n",
+    "ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]\n",
     "ax1.set_ylim(ylim)\n",
     "ax2.set_ylim(ylim)\n",
     "ax3.set_ylim(ylim)\n",
-    "\"\"\"\n",
+    "ax4.set_ylim(ylim)\n",
+    "ax5.set_ylim(ylim)\n",
+    "ax6.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
@@ -274,7 +284,7 @@
    "id": "fc5e1a7b",
    "metadata": {},
    "source": [
-    "# Spectrum"
+    "# Spectrum - first"
    ]
   },
   {
@@ -284,6 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_num0 = 0\n",
+    "\n",
     "fig = plt.figure(figsize=(12, 10))\n",
     "ax1 = fig.add_subplot(4, 1, 1)\n",
     "ax4 = fig.add_subplot(4, 1, 2)\n",
@@ -291,21 +303,21 @@
     "ax6 = fig.add_subplot(4, 1, 4)\n",
     "\n",
     "s = spec.EuEu[0][0]\n",
-    "print(spec.freq.shape, s.shape)\n",
+    "print(n_num0, n_time0, spec.freq.shape, s.shape)\n",
     "\n",
-    "ax1.plot(np.ravel(spec.EuEu[0][:][:]), '-r', linewidth=.5)\n",
-    "ax1.plot(np.ravel(spec.EvEv[0][:][:]), '-b', linewidth=.5)\n",
-    "ax1.plot(np.ravel(spec.EwEw[0][:][:]), '-b', linewidth=.5)\n",
+    "ax1.plot(np.ravel(spec.EuEu[n_num0][:][:]), '-r', linewidth=.5)\n",
+    "ax1.plot(np.ravel(spec.EvEv[n_num0][:][:]), '-b', linewidth=.5)\n",
+    "ax1.plot(np.ravel(spec.EwEw[n_num0][:][:]), '-b', linewidth=.5)\n",
     "#\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu[0][0][:]), '-r', linewidth=.5)\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv[0][0][:]), '-r', linewidth=.5)\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw[0][0][:]), '-r', linewidth=.5)\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu[0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv[0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw[0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu[0][n_block-1][:]), '-b', linewidth=.5)\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv[0][n_block-1][:]), '-b', linewidth=.5)\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw[0][n_block-1][:]), '-b', linewidth=.5)\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_num0][0][:]), '-r', linewidth=.5)\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_num0][0][:]), '-r', linewidth=.5)\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_num0][0][:]), '-r', linewidth=.5)\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_num0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_num0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_num0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_num0][n_block-1][:]), '-b', linewidth=.5)\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_num0][n_block-1][:]), '-b', linewidth=.5)\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_num0][n_block-1][:]), '-b', linewidth=.5)\n",
     "ax1.set_ylabel('EE [RAW @ ADC]')\n",
     "ax4.set_ylabel('EuEu [RAW @ ADC]')\n",
     "ax5.set_ylabel('EvEv [RAW @ ADC]')\n",
@@ -315,16 +327,78 @@
     "ax5.set_yscale('log')\n",
     "ax6.set_yscale('log')\n",
     "\n",
-    "# TMP: no filter\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu0[0][0][:]), ':r', linewidth=.5)\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv0[0][0][:]), ':r', linewidth=.5)\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw0[0][0][:]), ':r', linewidth=.5)\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu0[0][np.int16(n_block/2)][:]), ':g', linewidth=.5)\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv0[0][np.int16(n_block/2)][:]), ':g', linewidth=.5)\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw0[0][np.int16(n_block/2)][:]), ':g', linewidth=.5)\n",
-    "ax4.plot(spec.freq, np.ravel(spec.EuEu0[0][n_block-1][:]), ':b', linewidth=.5)\n",
-    "ax5.plot(spec.freq, np.ravel(spec.EvEv0[0][n_block-1][:]), ':b', linewidth=.5)\n",
-    "ax6.plot(spec.freq, np.ravel(spec.EwEw0[0][n_block-1][:]), ':b', linewidth=.5)\n",
+    "\"\"\"\n",
+    "# range: X-axis\n",
+    "xlim=[0, len(np.ravel(data.Eu_i[:][:]))]\n",
+    "ax1.set_xlim(xlim)\n",
+    "ax3.set_xlim(xlim)\n",
+    "ax5.set_xlim(xlim)\n",
+    "ax7.set_xlim(xlim)\n",
+    "xlim=[128 * data.N_feed[0] * 0, 128 * data.N_feed[0] * .1]\n",
+    "ax2.set_xlim(xlim)\n",
+    "ax4.set_xlim(xlim)\n",
+    "ax6.set_xlim(xlim)\n",
+    "\"\"\"\n",
+    "# range: Y-axis\n",
+    "ylim=[10**(p_raw_min-4), 10**(p_raw_max)]\n",
+    "ax1.set_ylim(ylim)\n",
+    "ax2.set_ylim(ylim)\n",
+    "ax3.set_ylim(ylim)\n",
+    "ax4.set_ylim(ylim)\n",
+    "ax5.set_ylim(ylim)\n",
+    "ax6.set_ylim(ylim)\n",
+    "\n",
+    "# Plot\n",
+    "plt.show()\n",
+    "png_fname = work_dir+data_name+'_spec.png'\n",
+    "# fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spectrum - Last"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_num0 = n_time0\n",
+    "\n",
+    "fig = plt.figure(figsize=(12, 10))\n",
+    "ax1 = fig.add_subplot(4, 1, 1)\n",
+    "ax4 = fig.add_subplot(4, 1, 2)\n",
+    "ax5 = fig.add_subplot(4, 1, 3)\n",
+    "ax6 = fig.add_subplot(4, 1, 4)\n",
+    "\n",
+    "s = spec.EuEu[0][0]\n",
+    "print(spec.freq.shape, s.shape)\n",
+    "\n",
+    "ax1.plot(np.ravel(spec.EuEu[n_num0][:][:]), '-r', linewidth=.5)\n",
+    "ax1.plot(np.ravel(spec.EvEv[n_num0][:][:]), '-b', linewidth=.5)\n",
+    "ax1.plot(np.ravel(spec.EwEw[n_num0][:][:]), '-b', linewidth=.5)\n",
+    "#\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_num0][0][:]), '-r', linewidth=.5)\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_num0][0][:]), '-r', linewidth=.5)\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_num0][0][:]), '-r', linewidth=.5)\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_num0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_num0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_num0][np.int16(n_block/2)][:]), '-g', linewidth=.5)\n",
+    "ax4.plot(spec.freq, np.ravel(spec.EuEu[n_num0][n_block-1][:]), '-b', linewidth=.5)\n",
+    "ax5.plot(spec.freq, np.ravel(spec.EvEv[n_num0][n_block-1][:]), '-b', linewidth=.5)\n",
+    "ax6.plot(spec.freq, np.ravel(spec.EwEw[n_num0][n_block-1][:]), '-b', linewidth=.5)\n",
+    "ax1.set_ylabel('EE [RAW @ ADC]')\n",
+    "ax4.set_ylabel('EuEu [RAW @ ADC]')\n",
+    "ax5.set_ylabel('EvEv [RAW @ ADC]')\n",
+    "ax6.set_ylabel('EwEw [RAW @ ADC]')\n",
+    "ax1.set_yscale('log')\n",
+    "ax4.set_yscale('log')\n",
+    "ax5.set_yscale('log')\n",
+    "ax6.set_yscale('log')\n",
     "\n",
     "\"\"\"\n",
     "# range: X-axis\n",
@@ -371,9 +445,9 @@
     "p_min0 = p_min - 4\n",
     "p_max0 = p_max\n",
     "n_num = n_time * n_block\n",
-    "EuEu_2d = np.ravel(spec.EuEu[0])\n",
-    "EvEv_2d = np.ravel(spec.EvEv[0])\n",
-    "EwEw_2d = np.ravel(spec.EwEw[0])\n",
+    "EuEu_2d = np.ravel(spec.EuEu)\n",
+    "EvEv_2d = np.ravel(spec.EvEv)\n",
+    "EwEw_2d = np.ravel(spec.EwEw)\n",
     "EuEu_2d = EuEu_2d.reshape(n_num, n_freq).transpose()\n",
     "EvEv_2d = EvEv_2d.reshape(n_num, n_freq).transpose()\n",
     "EwEw_2d = EwEw_2d.reshape(n_num, n_freq).transpose()\n",
