--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2023/10/25"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2023/11/5"
    ]
   },
   {
@@ -99,11 +99,13 @@
     "data_dir = '/Users/user/0-python/JUICE_data/'        # CDF data folder\n",
     "\n",
     "# *** Ver.2 ***\n",
-    "\n",
     "# 202310 -- SAMPLE\n",
-    "data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0011.cdf'\n",
+    "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0011.cdf'\n",
     "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0024.cdf'\n",
-    "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0034.cdf'"
+    "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0034.cdf'\n",
+    "\n",
+    "# 202311 -- FS\n",
+    "data_name = 'test-TMIDX/202310_FS/cdf/SID07_Seq07.cdf'"
    ]
   },
   {
