--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -100,12 +100,12 @@
     "\n",
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
-    "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0011.cdf'\n",
+    "data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0011.cdf'\n",
     "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0024.cdf'\n",
     "# data_name = 'test-CCSDS/sample/cdf/SID07_20231024-0034.cdf'\n",
     "\n",
     "# 202311 -- FS\n",
-    "data_name = 'test-TMIDX/202310_FS/cdf/SID07_Seq07.cdf'"
+    "# data_name = 'test-TMIDX/202310_FS/cdf/SID07_Seq07.cdf'"
    ]
   },
   {
