--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2023/10/17"
+    "# JUICE RPWI HF HK: QL -- 2023/11/12"
    ]
   },
   {
@@ -169,10 +169,7 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "png_fname = work_dir+'RPWI_HF_HK_'+date+'.png'\n",
-    "# fig.savefig(png_fname)\n",
-    "\n",
-    "# print(hk_lvps.cur_hf_33[300:500])\n",
-    "# print(hk_lvps.cur_hf_85[300:500])"
+    "# fig.savefig(png_fname)"
    ]
   }
  ],
@@ -192,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   },
   "orig_nbformat": 4
  },
