--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -105,7 +105,9 @@
     "# data_name = 'test-CCSDS/sample/cdf/SID23_20231024-0034.cdf'\n",
     "\n",
     "# 202311 -- FS\n",
-    "# data_name = 'test-TMIDX/202310_FS/cdf/SID23_Seq07.cdf'\n"
+    "data_name = 'test-TMIDX/202310_FS/cdf/SID23_Seq07.cdf'\n",
+    "data_name = 'test-TMIDX/202310_FS/cdf/SID23_Seq08.cdf'\n",
+    "# data_name = 'test-TMIDX/202310_FS/cdf/SID23_Seq09.cdf'\n"
    ]
   },
   {
@@ -227,8 +229,8 @@
     "ax3.set_xlim(xlim)\n",
     "ax5.set_xlim(xlim)\n",
     "ax7.set_xlim(xlim)\n",
-    "xlim=[0, 10000]\n",
     "# xlim=[128 * data.N_feed[0] * 45 * 24, 128 * data.N_feed[0] * 45 * 24 + 10000]\n",
+    "# xlim=[3.6e6, 3.62e6]\n",
     "print(xlim)\n",
     "ax2.set_xlim(xlim)\n",
     "ax4.set_xlim(xlim)\n",
